SPE_SignLang/k8s/login.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: login
spec:
  replicas: 1
  selector:
    matchLabels:
      app: login
  template:
    metadata:
      labels:
        app: login
    spec:
      containers:
      - name: login
        image: bhavyadora/sllogin:latest
        ports:
        - containerPort: 5002
        volumeMounts:
        - name: db-volume
          mountPath: /app/data
        resources:
          requests:
            cpu: "100m"
            memory: "200Mi"
          limits:
            cpu: "500m"
            memory: "500Mi"
      volumes:
      - name: db-volume
        persistentVolumeClaim:
          claimName: login-pvc
      

---
apiVersion: v1
kind: Service
metadata:
  name: login
spec:
  selector:
    app: login
  ports:
  - protocol: TCP
    port: 80        
    targetPort: 5002  
  type: ClusterIP
