SPE_SignLang/k8s/ingress.yaml
 
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: signlanguage-ingress
spec:
  rules:
  - host: signlanguage.local
    http:
      paths:
      - path: /login
        pathType: Prefix
        backend:
          service:
            name: login
            port:
              number: 80
      - path: /register
        pathType: Prefix
        backend:
          service:
            name: login
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 80
